--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
-  
+  <!--
+    - custom js link
+  -->
+  <script src="src/assets/js/script.js"></script>
+
+  <!--
+    - ionicon link
+  -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </html>
